base/panel/Nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: kraftnetes-panel-nodeport
  namespace: kraftnetes
spec:
  selector:
    app: kraftnetes-panel
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30000
  type: NodePort
