base/panel/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kraftnetes-panel-service
  namespace: kraftnetes
spec:
  selector:
    app: kraftnetes-panel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
