base/panel/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kraftnetes-panel
  namespace: kraftnetes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /panel(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kraftnetes-panel-service
            port:
              number: 80
